[ Key ]
* = Change or information
+ = Addition
! = Bug Fix

[ xxx xx, 2006 - 1.3 ]
	+ Added MonoDevelop target.
	+ Added NAnt target.
	* Cleaned up the code using FXCop.
	* Updated schema to 1.6 to fix a typo and add a new parameter.
	* jendave is now the maintainer of the project. RobLoach has been added as a developer.

[ August 5, 2004 - 1.2 ]
	+ Added Visual Studio Express (vs2005express) target contributed by Borrillis and modified for use with different languages
	+ Added the allowedgroups command line option followed by a pipe-delimited list of project group filter flags (eg. Group1|Group2) allow optional filtering of all projects that dont have at least one of these flags
	+ Added the filterGroups XML attribute to the project node and updated the scheme to v1.5 for this addition, it is used to specified the delimited list of filter groups to which a project belongs
	* Modified the removedir command line option to allow for a pipe-delimited list of directory names
	! Modified the resource loading code to search for resourced without the prepended namespace (as Visual Studio .NET does it) to allow for it to be compiled with SharpDevelop as well
	+ Added the GenerateXmlDocFile boolean option to the Options XML element
	* Changed the behavior of the XmlDocFile option so that if not specified it uses the assemblyName (without file extension) + .xml for the file name instead of just not generating the file since the new GenerateXmlDocFile takes care of this

[ January 3, 2004 - 1.1 ]
	! Replaced regex use for more efficient manual parsing to allow use on non-windows platforms with Mono which has Regex problems
	+ Added the checkOsVars attribute to the root element for enabling interpolation for Enviroment variables in the form ${var}, otherwise no checking is performed for efficiency-sake
	* Make the version attribute on the root element optional as it isn't used and not needed since the schema url contains the version

[ December 30, 2004 - 1.1 ]