@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="utf-8" ?>
-<xs:schema elementFormDefault="qualified" xmlns:xs="http://www.w3.org/2001/XMLSchema" targetNamespace="http://dnpb.sourceforge.net/schemas/dnpb-1.6.xsd"
-	xmlns="http://dnpb.sourceforge.net/schemas/dnpb-1.6.xsd">
+<xs:schema elementFormDefault="qualified" xmlns:xs="http://www.w3.org/2001/XMLSchema" targetNamespace="http://dnpb.sourceforge.net/schemas/prebuild-1.6.xsd"
+	xmlns="http://dnpb.sourceforge.net/schemas/prebuild-1.6.xsd">
 	<xs:annotation>
 		<xs:documentation>
 			Copyright (c) 2004-2005 Matthew Holmes (calefaction at houston . rr . com), Dan Moorehead (dan05a at gmail . com)
@@ -145,7 +145,6 @@
 				<xs:element name="WarningsAsErrors" type="xs:boolean" minOccurs="0" />
 				<xs:element name="SuppressWarnings" type="xs:string" minOccurs="0" />
 				<xs:element name="OutputPath" type="xs:string" minOccurs="0" />
-				<xs:element name="GenerateXmlDocFile" type="xs:boolean" minOccurs="0" />
 				<xs:element name="XmlDocFile" type="xs:string" minOccurs="0" />
 				<xs:element name="DebugInformation" type="xs:boolean" minOccurs="0" />
 				<xs:element name="RegisterComInterop" type="xs:boolean" minOccurs="0" />
