@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="utf-8" ?>
-<Prebuild xmlns="http://dnpb.sourceforge.net/schemas/dnpb-1.6.xsd" version="1.6">
+<Prebuild xmlns="http://dnpb.sourceforge.net/schemas/prebuild-1.6.xsd" version="1.6">
     <Process>src\Tao.Cg\prebuild.xml</Process>
     <Process>src\Tao.DevIl\prebuild.xml</Process>
     <Process>src\Tao.Ode\prebuild.xml</Process>
